--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Оптовая продажа сухого молока</title>
-	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
+	<title>РћРїС‚РѕРІР°СЏ РїСЂРѕРґР°Р¶Р° СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР°</title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta content="РћРїС‚РѕРІР°СЏ РїСЂРѕРґР°Р¶Р° СЃСѓС…РѕРіРѕ С†РµР»СЊРЅРѕРіРѕ Рё СЃСѓС…РѕРіРѕ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РјРѕР»РѕРєР°" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>РџРѕСЃС‚Р°РІС‰РёРє СЃС‹СЂСЊСЏ РґР»СЏ РїРёС‰РµРІРѕРіРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІР°</strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a class="active" href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
+				<a class="active" href="index.html">Р“Р»Р°РІРЅР°СЏ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">РџСЂР°Р№СЃ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">РљРѕРЅС‚Р°РєС‚С‹</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">Рћ РЅР°СЃ</a>
 			</nav>
 		</div>
 		<div id="sidebar">
-			<h1>Оптовая продажа сухого молока</h1>
+			<h1>РћРїС‚РѕРІР°СЏ РїСЂРѕРґР°Р¶Р° СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР°</h1>
 		</div>
 		<article>
-			<img align="center-right" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="350" hspace="0" src="images/molokogif.gif" vspace="0" width="500"><img align="center-right-side" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="350" hspace="0" src="images/moloko5.jpg" vspace="0" width="500">
-			<h2>МОЛОКО СУХОЕ ЦЕЛЬНОЕ</h2>
+			<img align="center-right" alt="РњРћР›РћРљРћ РЎРЈРҐРћР• Р¦Р•Р›Р¬РќРћР•" height="350" hspace="0" src="images/molokogif.gif" vspace="0" width="500"><img align="center-right-side" alt="РњРћР›РћРљРћ РЎРЈРҐРћР• Р¦Р•Р›Р¬РќРћР•" height="350" hspace="0" src="images/moloko5.jpg" vspace="0" width="500">
+			<h2>РњРћР›РћРљРћ РЎРЈРҐРћР• Р¦Р•Р›Р¬РќРћР•</h2>
 			<nav>
-				<p>Это молоко с естественной жирностью, которое не подвергалось манипуляциям по уменьшению или увеличению его жирности…</p>
+				<p>Р­С‚Рѕ РјРѕР»РѕРєРѕ СЃ РµСЃС‚РµСЃС‚РІРµРЅРЅРѕР№ Р¶РёСЂРЅРѕСЃС‚СЊСЋ, РєРѕС‚РѕСЂРѕРµ РЅРµ РїРѕРґРІРµСЂРіР°Р»РѕСЃСЊ РјР°РЅРёРїСѓР»СЏС†РёСЏРј РїРѕ СѓРјРµРЅСЊС€РµРЅРёСЋ РёР»Рё СѓРІРµР»РёС‡РµРЅРёСЋ РµРіРѕ Р¶РёСЂРЅРѕСЃС‚РёвЂ¦</p>
 				<div id="soderzhanie">
-					<a href="scmabout.html">ПОСМОТРЕТЬ ПОЛНОЕ ОПИСАНИЕ</a>
+					<a href="scmabout.html">РџРћРЎРњРћРўР Р•РўР¬ РџРћР›РќРћР• РћРџРРЎРђРќРР•</a>
 				</div>
-				<h2>МОЛОКО СУХОЕ ОБЕЗЖИРЕННОЕ</h2>
-				<p>Обезжиренное сухое молоко - это порошок белого или кремового цвета, получаемый путем высушивания обезжиренного коровьего молока...</p>
+				<h2>РњРћР›РћРљРћ РЎРЈРҐРћР• РћР‘Р•Р—Р–РР Р•РќРќРћР•</h2>
+				<p>РћР±РµР·Р¶РёСЂРµРЅРЅРѕРµ СЃСѓС…РѕРµ РјРѕР»РѕРєРѕ - СЌС‚Рѕ РїРѕСЂРѕС€РѕРє Р±РµР»РѕРіРѕ РёР»Рё РєСЂРµРјРѕРІРѕРіРѕ С†РІРµС‚Р°, РїРѕР»СѓС‡Р°РµРјС‹Р№ РїСѓС‚РµРј РІС‹СЃСѓС€РёРІР°РЅРёСЏ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РєРѕСЂРѕРІСЊРµРіРѕ РјРѕР»РѕРєР°...</p>
 				<div id="soderzhanie">
-					<a href="SOMAbout.html">ПОСМОТРЕТЬ ПОЛНОЕ ОПИСАНИЕ</a>
+					<a href="SOMAbout.html">РџРћРЎРњРћРўР Р•РўР¬ РџРћР›РќРћР• РћРџРРЎРђРќРР•</a>
 				</div>
 			</nav>
-			<h5><em>А ТАКЖЕ</em></h5>
-			<p><em>В продаже имеется сыворотка, яичный порошк, сырные продукты и т.д.(см. полный прайс-лист компании). </em></p>			
+			<h5><em>Рђ РўРђРљР–Р•</em></h5>
+			<p><em>Р’ РїСЂРѕРґР°Р¶Рµ РёРјРµРµС‚СЃСЏ СЃС‹РІРѕСЂРѕС‚РєР°, СЏРёС‡РЅС‹Р№ РїРѕСЂРѕС€Рє, СЃС‹СЂРЅС‹Рµ РїСЂРѕРґСѓРєС‚С‹ Рё С‚.Рґ.(СЃРј. РїРѕР»РЅС‹Р№ РїСЂР°Р№СЃ-Р»РёСЃС‚ РєРѕРјРїР°РЅРёРё). </em></p>			
 		</article>	
 		<footer>
-			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
+			&copy;Р РѕРјР°РЅ РўСЂРѕС€РёРЅ. Р§РµР»СЏР±РёРЅСЃРє - 2019. РЎР°Р№С‚ РІРёР·РёС‚РєР° &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">РќР°РїРёСЃР°С‚СЊ РјРЅРµ</a>
 		</footer>
 	</div>
 </body>
