--- a/about.html
+++ b/about.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>О компании.</title>
-	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
+	<title>Рћ РєРѕРјРїР°РЅРёРё.</title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta content="РћРїС‚РѕРІР°СЏ РїСЂРѕРґР°Р¶Р° СЃСѓС…РѕРіРѕ С†РµР»СЊРЅРѕРіРѕ Рё СЃСѓС…РѕРіРѕ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РјРѕР»РѕРєР°" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>РџРѕСЃС‚Р°РІС‰РёРє СЃС‹СЂСЊСЏ РґР»СЏ РїРёС‰РµРІРѕРіРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІР°</strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="about.html">О нас</a>
+				<a href="index.html">Р“Р»Р°РІРЅР°СЏ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">РџСЂР°Р№СЃ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">РљРѕРЅС‚Р°РєС‚С‹</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="about.html">Рћ РЅР°СЃ</a>
 			</nav>			
 		</div>
 
 		<div id="of1">
 			<div id="sidebar">
-				<h1>О компании</h1>
+				<h1>Рћ РєРѕРјРїР°РЅРёРё</h1>
 			</div>
 			<article id="of3">
 				<p id="sh1">
-				Компания занимается оптовой торговлей пищевого сырья от разных производителей (Курган, Пенза, Челябинск, Белоруссия...) с оперативной доставкой во все регионы Урала. Своим клиентам мы рады предложить не только богатый ассортимент качественных товаров, но и доступные цены. Закупая продукты напрямую у производителя, мы можем позволить себе вести лояльную ценовую политику, что располагает потенциальных клиентов к продолжительному сотрудничеству.</p>
+				РљРѕРјРїР°РЅРёСЏ Р·Р°РЅРёРјР°РµС‚СЃСЏ РѕРїС‚РѕРІРѕР№ С‚РѕСЂРіРѕРІР»РµР№ РїРёС‰РµРІРѕРіРѕ СЃС‹СЂСЊСЏ РѕС‚ СЂР°Р·РЅС‹С… РїСЂРѕРёР·РІРѕРґРёС‚РµР»РµР№ (РљСѓСЂРіР°РЅ, РџРµРЅР·Р°, Р§РµР»СЏР±РёРЅСЃРє, Р‘РµР»РѕСЂСѓСЃСЃРёСЏ...) СЃ РѕРїРµСЂР°С‚РёРІРЅРѕР№ РґРѕСЃС‚Р°РІРєРѕР№ РІРѕ РІСЃРµ СЂРµРіРёРѕРЅС‹ РЈСЂР°Р»Р°. РЎРІРѕРёРј РєР»РёРµРЅС‚Р°Рј РјС‹ СЂР°РґС‹ РїСЂРµРґР»РѕР¶РёС‚СЊ РЅРµ С‚РѕР»СЊРєРѕ Р±РѕРіР°С‚С‹Р№ Р°СЃСЃРѕСЂС‚РёРјРµРЅС‚ РєР°С‡РµСЃС‚РІРµРЅРЅС‹С… С‚РѕРІР°СЂРѕРІ, РЅРѕ Рё РґРѕСЃС‚СѓРїРЅС‹Рµ С†РµРЅС‹. Р—Р°РєСѓРїР°СЏ РїСЂРѕРґСѓРєС‚С‹ РЅР°РїСЂСЏРјСѓСЋ Сѓ РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЏ, РјС‹ РјРѕР¶РµРј РїРѕР·РІРѕР»РёС‚СЊ СЃРµР±Рµ РІРµСЃС‚Рё Р»РѕСЏР»СЊРЅСѓСЋ С†РµРЅРѕРІСѓСЋ РїРѕР»РёС‚РёРєСѓ, С‡С‚Рѕ СЂР°СЃРїРѕР»Р°РіР°РµС‚ РїРѕС‚РµРЅС†РёР°Р»СЊРЅС‹С… РєР»РёРµРЅС‚РѕРІ Рє РїСЂРѕРґРѕР»Р¶РёС‚РµР»СЊРЅРѕРјСѓ СЃРѕС‚СЂСѓРґРЅРёС‡РµСЃС‚РІСѓ.</p>
 				<div id = "of4">
-				<h4 id = "shrcentr">Основная продукция компании:</h4>
+				<h4 id = "shrcentr">РћСЃРЅРѕРІРЅР°СЏ РїСЂРѕРґСѓРєС†РёСЏ РєРѕРјРїР°РЅРёРё:</h4>
 					<ul id = "perabout">
-						<li><em>сухое молоко;</em></li>
-						<li><em>яичный порошок;</em></li>
-						<li><em>заменители молока;</em></li>
-						<li><em>яичный порошок;</em></li>
-						<li><em>сырная продукция;</em></li>
-						<li><em>сливки сухие;</em></li>
-						<li><em>молочный жир;</em></li>
-						<li><em>сгущенное молоко;</em></li>
-						<li><em>мальтодекстрин.</em></li>
+						<li><em>СЃСѓС…РѕРµ РјРѕР»РѕРєРѕ;</em></li>
+						<li><em>СЏРёС‡РЅС‹Р№ РїРѕСЂРѕС€РѕРє;</em></li>
+						<li><em>Р·Р°РјРµРЅРёС‚РµР»Рё РјРѕР»РѕРєР°;</em></li>
+						<li><em>СЏРёС‡РЅС‹Р№ РїРѕСЂРѕС€РѕРє;</em></li>
+						<li><em>СЃС‹СЂРЅР°СЏ РїСЂРѕРґСѓРєС†РёСЏ;</em></li>
+						<li><em>СЃР»РёРІРєРё СЃСѓС…РёРµ;</em></li>
+						<li><em>РјРѕР»РѕС‡РЅС‹Р№ Р¶РёСЂ;</em></li>
+						<li><em>СЃРіСѓС‰РµРЅРЅРѕРµ РјРѕР»РѕРєРѕ;</em></li>
+						<li><em>РјР°Р»СЊС‚РѕРґРµРєСЃС‚СЂРёРЅ.</em></li>
 					</ul>
-					<h3 id = "shrcentr"> Вся продукция имеет высокое качество, сертифицирована и имеет гарантию соответствия ГОСТ.</h3> 
+					<h3 id = "shrcentr"> Р’СЃСЏ РїСЂРѕРґСѓРєС†РёСЏ РёРјРµРµС‚ РІС‹СЃРѕРєРѕРµ РєР°С‡РµСЃС‚РІРѕ, СЃРµСЂС‚РёС„РёС†РёСЂРѕРІР°РЅР° Рё РёРјРµРµС‚ РіР°СЂР°РЅС‚РёСЋ СЃРѕРѕС‚РІРµС‚СЃС‚РІРёСЏ Р“РћРЎРў.</h3> 
 				</div>	
 			</article>
 			<nav id= "ban">
-				<a href="http://сайто-строитель.рф" target="_blank">
-					<img src="http://сайто-строитель.рф/uploads/banner_sitestroy.gif" width="468" height="60" title="сайт для web-программистов" border="0"/>				
+				<a href="http://СЃР°Р№С‚Рѕ-СЃС‚СЂРѕРёС‚РµР»СЊ.СЂС„" target="_blank">
+					<img src="http://СЃР°Р№С‚Рѕ-СЃС‚СЂРѕРёС‚РµР»СЊ.СЂС„/uploads/banner_sitestroy.gif" width="468" height="60" title="СЃР°Р№С‚ РґР»СЏ web-РїСЂРѕРіСЂР°РјРјРёСЃС‚РѕРІ" border="0"/>				
 				</a>
 			</nav>
-				<p><a href="index.html"><u>На главную</u></a></p>	
+				<p><a href="index.html"><u>РќР° РіР»Р°РІРЅСѓСЋ</u></a></p>	
 		</div>
 	
 		<footer>
-			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
+			&copy;Р РѕРјР°РЅ РўСЂРѕС€РёРЅ. Р§РµР»СЏР±РёРЅСЃРє - 2019. РЎР°Р№С‚ РІРёР·РёС‚РєР° &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">РќР°РїРёСЃР°С‚СЊ РјРЅРµ</a>
 		</footer>
 	</div>
 </body>
