--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Контакты</title>
-	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
+	<title>ГЉГ®Г­ГІГ ГЄГІГ»</title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta content="ГЋГЇГІГ®ГўГ Гї ГЇГ°Г®Г¤Г Г¦Г  Г±ГіГµГ®ГЈГ® Г¶ГҐГ«ГјГ­Г®ГЈГ® ГЁ Г±ГіГµГ®ГЈГ® Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГЈГ® Г¬Г®Г«Г®ГЄГ " name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>ГЏГ®Г±ГІГ ГўГ№ГЁГЄ Г±Г»Г°ГјГї Г¤Г«Гї ГЇГЁГ№ГҐГўГ®ГЈГ® ГЇГ°Г®ГЁГ§ГўГ®Г¤Г±ГІГўГ </strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
+				<a href="index.html">ГѓГ«Г ГўГ­Г Гї</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">ГЏГ°Г Г©Г±</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="contact.html">ГЉГ®Г­ГІГ ГЄГІГ»</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">ГЋ Г­Г Г±</a>
 			</nav>
 		</div>
 		<div id="of1">
 			<div id="sidebar">
-				<h1>Контакты</h1>
+				<h1>ГЉГ®Г­ГІГ ГЄГІГ»</h1>
 			</div>
 			<article>
-				<h3>Контактные телефоны:</h3>
+				<h3>ГЉГ®Г­ГІГ ГЄГІГ­Г»ГҐ ГІГҐГ«ГҐГґГ®Г­Г»:</h3>
 				<div id="of2">
 					<p id="soderzhanie"><strong>+7 900-082-41-23</strong></p>
 					<p id="soderzhanie"><strong>+7 967-863-56-04</strong></p>
-					<h3>Адрес:</h3>
+					<h3>ГЂГ¤Г°ГҐГ±:</h3>
 					<p id="sh1"></p>
-					<p id="soderzhanie"><strong>Маслобазовая, 6</strong></p>
-					<p id="soderzhanie"><strong>Советский район, Челябинск, 454045</strong></p>
+					<p id="soderzhanie"><strong>ГЊГ Г±Г«Г®ГЎГ Г§Г®ГўГ Гї, 6</strong></p>
+					<p id="soderzhanie"><strong>Г‘Г®ГўГҐГІГ±ГЄГЁГ© Г°Г Г©Г®Г­, Г—ГҐГ«ГїГЎГЁГ­Г±ГЄ, 454045</strong></p>
 					<div id="YMapsID" style="width:500px;height:400px">
 						<script async charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A37d7932eccbab7ad35743583a5523f676457168ca68dde970768f545f0e57287&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true;" type="text/javascript"></script>			
 					</div>
 					<p id="sh1"></p>
-					<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
+					<p id="soderzhanie"><a href="index.html"><u>ГЌГ  ГЈГ«Г ГўГ­ГіГѕ</u></a></p>
 				</div>
 			</article>
 		</div>
 		<footer>
-			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
+			&copy;ГђГ®Г¬Г Г­ Г’Г°Г®ГёГЁГ­. Г—ГҐГ«ГїГЎГЁГ­Г±ГЄ - 2019. Г‘Г Г©ГІ ГўГЁГ§ГЁГІГЄГ  &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">ГЌГ ГЇГЁГ±Г ГІГј Г¬Г­ГҐ</a>
 		</footer>
 	</div>
 </body>
