--- a/price.html
+++ b/price.html
@@ -1,97 +1,98 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Прайс лист</title>
-	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
+	<title>ГЏГ°Г Г©Г± Г«ГЁГ±ГІ</title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta content="ГЋГЇГІГ®ГўГ Гї ГЇГ°Г®Г¤Г Г¦Г  Г±ГіГµГ®ГЈГ® Г¶ГҐГ«ГјГ­Г®ГЈГ® ГЁ Г±ГіГµГ®ГЈГ® Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГЈГ® Г¬Г®Г«Г®ГЄГ " name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>ГЏГ®Г±ГІГ ГўГ№ГЁГЄ Г±Г»Г°ГјГї Г¤Г«Гї ГЇГЁГ№ГҐГўГ®ГЈГ® ГЇГ°Г®ГЁГ§ГўГ®Г¤Г±ГІГўГ </strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
+				<a href="index.html">ГѓГ«Г ГўГ­Г Гї</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="price.html">ГЏГ°Г Г©Г±</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">ГЉГ®Г­ГІГ ГЄГІГ»</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">ГЋ Г­Г Г±</a>
 			</nav>
 		</div>
 		<div id="of1">
 			<div id="sidebar">
-				<h1>Прайс-лист</h1>
+				<h1>ГЏГ°Г Г©Г±-Г«ГЁГ±ГІ</h1>
 			</div>
 			<article>
 				<div id="of2">
 					<table border="2" cellpadding="1" id="table" width="100%">
 						<tr>
-							<th align="center">Наименование</th>
-							<th>Страна производства</th>
-							<th>Фасовка (кг)</th>
-							<th>Срок хранения</th>
-							<th>Цена</th>
+							<th align="center">ГЌГ ГЁГ¬ГҐГ­Г®ГўГ Г­ГЁГҐ</th>
+							<th>Г‘ГІГ°Г Г­Г  ГЇГ°Г®ГЁГ§ГўГ®Г¤Г±ГІГўГ </th>
+							<th>Г”Г Г±Г®ГўГЄГ  (ГЄГЈ)</th>
+							<th>Г‘Г°Г®ГЄ ГµГ°Г Г­ГҐГ­ГЁГї</th>
+							<th>Г–ГҐГ­Г </th>
 						</tr>
 						<tr>
-							<td colspan="5" align="center"><strong>Сухое обезжиренное молоко ГОСТ</strong></td>
+							<td colspan="5" align="center"><strong>Г‘ГіГµГ®ГҐ Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГҐ Г¬Г®Г«Г®ГЄГ® ГѓГЋГ‘Г’</strong></td>
 						</tr>
 						<tr>
-							<td align="left">Сухое обезжиренное молоко 1,5% Гомель, Витебск, Воложин, Клёцк</td>
-							<td>Беларусь</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГҐ Г¬Г®Г«Г®ГЄГ® 1,5% ГѓГ®Г¬ГҐГ«Гј, Г‚ГЁГІГҐГЎГ±ГЄ, Г‚Г®Г«Г®Г¦ГЁГ­, ГЉГ«ВёГ¶ГЄ</td>
+							<td>ГЃГҐГ«Г Г°ГіГ±Гј</td>
 							<td>25</td>
-							<td>24 мес</td>
+							<td>24 Г¬ГҐГ±</td>
 							<td>170</td>
 						</tr>
 						<tr>
-							<td align="left">Сухое обезжиренное молоко 1,5%</td>
-							<td>Россия</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГҐ Г¬Г®Г«Г®ГЄГ® 1,5%</td>
+							<td>ГђГ®Г±Г±ГЁГї</td>
 							<td>25</td>
-							<td>24 мес</td>
+							<td>24 Г¬ГҐГ±</td>
 							<td>175</td>
 						</tr>
 						<tr>
-							<td align="left">Сухое обезжиренное молоко  до 1,25% La Serenisima (Mastellone)</td>
-							<td>Аргентина</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГҐ Г¬Г®Г«Г®ГЄГ®  Г¤Г® 1,25% La Serenisima (Mastellone)</td>
+							<td>ГЂГ°ГЈГҐГ­ГІГЁГ­Г </td>
 							<td>25</td>
-							<td>24 мес</td>
+							<td>24 Г¬ГҐГ±</td>
 							<td>195</td>
 						</tr>
 						<tr>
-							<td align="left">Сухое обезжиренное молоко до 1,5% Cremo SA</td>
-							<td>Швейцария</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г®ГЎГҐГ§Г¦ГЁГ°ГҐГ­Г­Г®ГҐ Г¬Г®Г«Г®ГЄГ® Г¤Г® 1,5% Cremo SA</td>
+							<td>ГГўГҐГ©Г¶Г Г°ГЁГї</td>
 							<td>25</td>
-							<td>24 мес</td>
-							<td>по запросу</td>
+							<td>24 Г¬ГҐГ±</td>
+							<td>ГЇГ® Г§Г ГЇГ°Г®Г±Гі</td>
 						</tr>
 						<tr>
-							<td colspan="5" align="center"><strong>Сухое цельное ГОСТ</strong></td>
+							<td colspan="5" align="center"><strong>Г‘ГіГµГ®ГҐ Г¶ГҐГ«ГјГ­Г®ГҐ ГѓГЋГ‘Г’</strong></td>
 						</tr>
 						<tr>
-							<td align="left">Сухое цельное молоко 25% Гомель, ГОСТ</td>
-							<td>Беларусь</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г¶ГҐГ«ГјГ­Г®ГҐ Г¬Г®Г«Г®ГЄГ® 25% ГѓГ®Г¬ГҐГ«Гј, ГѓГЋГ‘Г’</td>
+							<td>ГЃГҐГ«Г Г°ГіГ±Гј</td>
 							<td>25</td>
-							<td>24 мес</td>
+							<td>24 Г¬ГҐГ±</td>
 							<td>270</td>
 						</tr>
 						<tr>
-							<td align="left">Сухое цельное молоко 26% Fonterra</td>
-							<td>Аргентина</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г¶ГҐГ«ГјГ­Г®ГҐ Г¬Г®Г«Г®ГЄГ® 26% Fonterra</td>
+							<td>ГЂГ°ГЈГҐГ­ГІГЁГ­Г </td>
 							<td>25</td>
-							<td>24 мес</td>
+							<td>24 Г¬ГҐГ±</td>
 							<td>270</td>
 						</tr>
 						<tr>
-							<td align="left">Сухое цельное молоко 26% </td>
-							<td>Уругвай</td>
+							<td align="left">Г‘ГіГµГ®ГҐ Г¶ГҐГ«ГјГ­Г®ГҐ Г¬Г®Г«Г®ГЄГ® 26% </td>
+							<td>Г“Г°ГіГЈГўГ Г©</td>
 							<td>25</td>
-							<td>24 мес</td>
+							<td>24 Г¬ГҐГ±</td>
 							<td>270</td>
 						</tr>
 					</table>
-					<h3 id="dwlprice"><a href="files/price.xlsx">Скачать полный прайс-лист всей продукции.</a></h3>
-					<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
+					<h3 id="dwlprice"><a href="files/price.xlsx">Г‘ГЄГ Г·Г ГІГј ГЇГ®Г«Г­Г»Г© ГЇГ°Г Г©Г±-Г«ГЁГ±ГІ ГўГ±ГҐГ© ГЇГ°Г®Г¤ГіГЄГ¶ГЁГЁ.</a></h3>
+					<p id="soderzhanie"><a href="index.html"><u>ГЌГ  ГЈГ«Г ГўГ­ГіГѕ</u></a></p>
 				</div>
 			</article>
 		</div>
 		<footer>
-			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
+			&copy;ГђГ®Г¬Г Г­ Г’Г°Г®ГёГЁГ­. Г—ГҐГ«ГїГЎГЁГ­Г±ГЄ - 2019. Г‘Г Г©ГІ ГўГЁГ§ГЁГІГЄГ  &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">ГЌГ ГЇГЁГ±Г ГІГј Г¬Г­ГҐ</a>
 		</footer>
 	</div>
 </body>
