--- a/scmabout.html
+++ b/scmabout.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>О СУХОМ ЦЕЛЬНОМ МОЛОКЕ</title>
-	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
+	<title>Рћ РЎРЈРҐРћРњ Р¦Р•Р›Р¬РќРћРњ РњРћР›РћРљР•</title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta content="РћРїС‚РѕРІР°СЏ РїСЂРѕРґР°Р¶Р° СЃСѓС…РѕРіРѕ С†РµР»СЊРЅРѕРіРѕ Рё СЃСѓС…РѕРіРѕ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РјРѕР»РѕРєР°" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>РџРѕСЃС‚Р°РІС‰РёРє СЃС‹СЂСЊСЏ РґР»СЏ РїРёС‰РµРІРѕРіРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІР°</strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
+				<a href="index.html">Р“Р»Р°РІРЅР°СЏ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">РџСЂР°Р№СЃ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">РљРѕРЅС‚Р°РєС‚С‹</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">Рћ РЅР°СЃ</a>
 			</nav>
 		</div>
 		<div id="sidebar">
-			<h1>МОЛОКО СУХОЕ ЦЕЛЬНОЕ</h1>
+			<h1>РњРћР›РћРљРћ РЎРЈРҐРћР• Р¦Р•Р›Р¬РќРћР•</h1>
 		</div>
 		<article>
-			<h2>ИСТОРИЯ ПОЯВЛЕНИЯ</h2>
+			<h2>РРЎРўРћР РРЇ РџРћРЇР’Р›Р•РќРРЇ</h2>
 			<div id="of1">
-				<p id="sh1"><em>Молоко</em> - это любимый всеми и полезный напиток. Его употребление замечательно сказывается на организме. Именно поэтому часто возникал вопрос: как увеличить срок хранения этого замечательного напитка, ведь натуральное цельное молоко так быстро прокисает. И брать его с собой в различные длительные военные кампании или путешествия было нецелесообразно. Прорыв в этой области произошел в далеком 1802 году, когда некий врач Осип Кричевский добился получения из цельного продукта сухого заменителя, не уступающего по питательным и полезным свойствам своему натуральному собрату. Но начинания его не были взяты из воздуха, потому как еще в 1792 году такое молоко упоминалось в научных работах Ивана Ериха «Труды Вольного Экономического Общества». Там есть запись о том, что жители некоторых восточных областей добывали этот продукт путем вымораживания обычного коровьего молока. Тем самым получая, как он выразился, «великие запасы млечных глыб». Основываясь на разработках Кричевского, в 1832 году известный российский химик Дирчов начал выпуск сухого молока в коммерческих целях, а чуть позже, в 1855 году в Англии был запатентован процесс его производства. Промышленных объемов выпуск этой продукции достиг только в конце XIX столетия.</p>
-				<h2>ПОЛЕЗНЫЕ СВОЙСТВА</h2><img align="left" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="150" hspace="15" src="images/moloko3.jpg" vspace="5" width="150">
-				<p id="sh1">Польза <em>цельного сухого молока</em> обусловлена наличием витаминов, минералов и других веществ, которые нужны для нормальной жизнедеятельности организма. Есть в этом продукте витамин А, который улучшает остроту зрения. Благодаря наличию витаминов группы В, улучшается деятельность нервной системы, что в свою очередь помогает избавиться от бессонницы и стресса. Есть в цельном сухом молоке и аскорбиновая кислота, которая нужна для иммунитета. Учитывая содержание витамина D, этот продукт снижает риск возникновения остеопороза и рахита. Есть в сухом молоке холин, который нормализует уровень холестерина в крови и снижает проявление отеков. Входит в состав этого продукта и железо, которое способствует кроветворению и улучшает состояние крови. Благодаря совместному действию кальция и фосфора активирует процесс регенерации и укрепления костной ткани. Есть в цельном сухом молоке минералы, которые важны для сердца и сосудов - магний и калий. Это только небольшой перечень веществ, которые есть в этом продукте.</p>
-				<h2>ПРОЦЕСС ИЗГОТОВЛЕНИЯ ПРОДУКТА</h2>
-				<p id="sh1">Основой процесса изготовления этого продукта является выпаривание воды из обычного молока. Перед началом изготовления свежее молоко пастеризуют, приводят к достаточным нормам жирности и сгущают. После происходит процесс гомогенизации продукта и последующая его сушка в сушилках распылительного или вальцового типа. Причем первые пользуются намного большей популярностью у промышленников, так как их производительность в разы больше, а качество продукта при этом не теряется. На таких установках сушка производится при температурах от 150 до 180 градусов. Но изначально предпочтение отдавалось вальцовым сушилкам, процесс в которых происходил с помощью кондуктивной сушки. Для этого на сушилку подается концентрированный цельный продукт, прошедший выпаривание в мультициклонных аппаратах. Содержание сухих веществ в таком молоке составляет приблизительно 40%. Полученный таким образом порошок содержит в себе примерно 3% остаточной влажности. За счет того, что сгущенное молоко при соприкосновении с нагретой поверхностью сушилки карамелизируется, готовый продукт имеет сладковатый карамельный привкус. Он содержит в своем составе много свободных жиров и благодаря этому является незаменимым продуктом в производстве шоколада. Таким карамельным молоком заменяют дорогостоящее масло какао. Единственным минусом при производстве молока на вальцовых сушилках является низкая производительность. После сушки молока любым из видов, его просеивают и охлаждают. Чтобы увеличить срок использования, продукт упаковывают при помощи вакуума или инертных газов. Для производства сухого напитка существуют два ГОСТа: 4495-87 <em>«Молоко цельное сухое»</em> и Р 52791-2007 <em>«Консервы молочные. Молоко сухое. Технические условия».</em></p>
-				<h2>КЛАССИФИКАЦИЯ И ХИМИЧЕСКИЙ СОСТАВ</h2>
-				<p id="sh1"><em>Сухое молоко</em> бывает двух видов: <em>цельное сухое молоко (СЦМ)</em> и <em>обезжиренное сухое молоко (СОМ)</em>. В зависимости от разновидности меняется его пищевая ценность и содержание полезных веществ и витаминов. Минеральный комплекс в обоих видах продукта одинаков, однако в обезжиренном молоке содержание веществ немного больше.</p>
+				<p id="sh1"><em>РњРѕР»РѕРєРѕ</em> - СЌС‚Рѕ Р»СЋР±РёРјС‹Р№ РІСЃРµРјРё Рё РїРѕР»РµР·РЅС‹Р№ РЅР°РїРёС‚РѕРє. Р•РіРѕ СѓРїРѕС‚СЂРµР±Р»РµРЅРёРµ Р·Р°РјРµС‡Р°С‚РµР»СЊРЅРѕ СЃРєР°Р·С‹РІР°РµС‚СЃСЏ РЅР° РѕСЂРіР°РЅРёР·РјРµ. РРјРµРЅРЅРѕ РїРѕСЌС‚РѕРјСѓ С‡Р°СЃС‚Рѕ РІРѕР·РЅРёРєР°Р» РІРѕРїСЂРѕСЃ: РєР°Рє СѓРІРµР»РёС‡РёС‚СЊ СЃСЂРѕРє С…СЂР°РЅРµРЅРёСЏ СЌС‚РѕРіРѕ Р·Р°РјРµС‡Р°С‚РµР»СЊРЅРѕРіРѕ РЅР°РїРёС‚РєР°, РІРµРґСЊ РЅР°С‚СѓСЂР°Р»СЊРЅРѕРµ С†РµР»СЊРЅРѕРµ РјРѕР»РѕРєРѕ С‚Р°Рє Р±С‹СЃС‚СЂРѕ РїСЂРѕРєРёСЃР°РµС‚. Р Р±СЂР°С‚СЊ РµРіРѕ СЃ СЃРѕР±РѕР№ РІ СЂР°Р·Р»РёС‡РЅС‹Рµ РґР»РёС‚РµР»СЊРЅС‹Рµ РІРѕРµРЅРЅС‹Рµ РєР°РјРїР°РЅРёРё РёР»Рё РїСѓС‚РµС€РµСЃС‚РІРёСЏ Р±С‹Р»Рѕ РЅРµС†РµР»РµСЃРѕРѕР±СЂР°Р·РЅРѕ. РџСЂРѕСЂС‹РІ РІ СЌС‚РѕР№ РѕР±Р»Р°СЃС‚Рё РїСЂРѕРёР·РѕС€РµР» РІ РґР°Р»РµРєРѕРј 1802 РіРѕРґСѓ, РєРѕРіРґР° РЅРµРєРёР№ РІСЂР°С‡ РћСЃРёРї РљСЂРёС‡РµРІСЃРєРёР№ РґРѕР±РёР»СЃСЏ РїРѕР»СѓС‡РµРЅРёСЏ РёР· С†РµР»СЊРЅРѕРіРѕ РїСЂРѕРґСѓРєС‚Р° СЃСѓС…РѕРіРѕ Р·Р°РјРµРЅРёС‚РµР»СЏ, РЅРµ СѓСЃС‚СѓРїР°СЋС‰РµРіРѕ РїРѕ РїРёС‚Р°С‚РµР»СЊРЅС‹Рј Рё РїРѕР»РµР·РЅС‹Рј СЃРІРѕР№СЃС‚РІР°Рј СЃРІРѕРµРјСѓ РЅР°С‚СѓСЂР°Р»СЊРЅРѕРјСѓ СЃРѕР±СЂР°С‚Сѓ. РќРѕ РЅР°С‡РёРЅР°РЅРёСЏ РµРіРѕ РЅРµ Р±С‹Р»Рё РІР·СЏС‚С‹ РёР· РІРѕР·РґСѓС…Р°, РїРѕС‚РѕРјСѓ РєР°Рє РµС‰Рµ РІ 1792 РіРѕРґСѓ С‚Р°РєРѕРµ РјРѕР»РѕРєРѕ СѓРїРѕРјРёРЅР°Р»РѕСЃСЊ РІ РЅР°СѓС‡РЅС‹С… СЂР°Р±РѕС‚Р°С… РРІР°РЅР° Р•СЂРёС…Р° В«РўСЂСѓРґС‹ Р’РѕР»СЊРЅРѕРіРѕ Р­РєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ РћР±С‰РµСЃС‚РІР°В». РўР°Рј РµСЃС‚СЊ Р·Р°РїРёСЃСЊ Рѕ С‚РѕРј, С‡С‚Рѕ Р¶РёС‚РµР»Рё РЅРµРєРѕС‚РѕСЂС‹С… РІРѕСЃС‚РѕС‡РЅС‹С… РѕР±Р»Р°СЃС‚РµР№ РґРѕР±С‹РІР°Р»Рё СЌС‚РѕС‚ РїСЂРѕРґСѓРєС‚ РїСѓС‚РµРј РІС‹РјРѕСЂР°Р¶РёРІР°РЅРёСЏ РѕР±С‹С‡РЅРѕРіРѕ РєРѕСЂРѕРІСЊРµРіРѕ РјРѕР»РѕРєР°. РўРµРј СЃР°РјС‹Рј РїРѕР»СѓС‡Р°СЏ, РєР°Рє РѕРЅ РІС‹СЂР°Р·РёР»СЃСЏ, В«РІРµР»РёРєРёРµ Р·Р°РїР°СЃС‹ РјР»РµС‡РЅС‹С… РіР»С‹Р±В». РћСЃРЅРѕРІС‹РІР°СЏСЃСЊ РЅР° СЂР°Р·СЂР°Р±РѕС‚РєР°С… РљСЂРёС‡РµРІСЃРєРѕРіРѕ, РІ 1832 РіРѕРґСѓ РёР·РІРµСЃС‚РЅС‹Р№ СЂРѕСЃСЃРёР№СЃРєРёР№ С…РёРјРёРє Р”РёСЂС‡РѕРІ РЅР°С‡Р°Р» РІС‹РїСѓСЃРє СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР° РІ РєРѕРјРјРµСЂС‡РµСЃРєРёС… С†РµР»СЏС…, Р° С‡СѓС‚СЊ РїРѕР·Р¶Рµ, РІ 1855 РіРѕРґСѓ РІ РђРЅРіР»РёРё Р±С‹Р» Р·Р°РїР°С‚РµРЅС‚РѕРІР°РЅ РїСЂРѕС†РµСЃСЃ РµРіРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІР°. РџСЂРѕРјС‹С€Р»РµРЅРЅС‹С… РѕР±СЉРµРјРѕРІ РІС‹РїСѓСЃРє СЌС‚РѕР№ РїСЂРѕРґСѓРєС†РёРё РґРѕСЃС‚РёРі С‚РѕР»СЊРєРѕ РІ РєРѕРЅС†Рµ XIX СЃС‚РѕР»РµС‚РёСЏ.</p>
+				<h2>РџРћР›Р•Р—РќР«Р• РЎР’РћР™РЎРўР’Рђ</h2><img align="left" alt="РњРћР›РћРљРћ РЎРЈРҐРћР• Р¦Р•Р›Р¬РќРћР•" height="150" hspace="15" src="images/moloko3.jpg" vspace="5" width="150">
+				<p id="sh1">РџРѕР»СЊР·Р° <em>С†РµР»СЊРЅРѕРіРѕ СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР°</em> РѕР±СѓСЃР»РѕРІР»РµРЅР° РЅР°Р»РёС‡РёРµРј РІРёС‚Р°РјРёРЅРѕРІ, РјРёРЅРµСЂР°Р»РѕРІ Рё РґСЂСѓРіРёС… РІРµС‰РµСЃС‚РІ, РєРѕС‚РѕСЂС‹Рµ РЅСѓР¶РЅС‹ РґР»СЏ РЅРѕСЂРјР°Р»СЊРЅРѕР№ Р¶РёР·РЅРµРґРµСЏС‚РµР»СЊРЅРѕСЃС‚Рё РѕСЂРіР°РЅРёР·РјР°. Р•СЃС‚СЊ РІ СЌС‚РѕРј РїСЂРѕРґСѓРєС‚Рµ РІРёС‚Р°РјРёРЅ Рђ, РєРѕС‚РѕСЂС‹Р№ СѓР»СѓС‡С€Р°РµС‚ РѕСЃС‚СЂРѕС‚Сѓ Р·СЂРµРЅРёСЏ. Р‘Р»Р°РіРѕРґР°СЂСЏ РЅР°Р»РёС‡РёСЋ РІРёС‚Р°РјРёРЅРѕРІ РіСЂСѓРїРїС‹ Р’, СѓР»СѓС‡С€Р°РµС‚СЃСЏ РґРµСЏС‚РµР»СЊРЅРѕСЃС‚СЊ РЅРµСЂРІРЅРѕР№ СЃРёСЃС‚РµРјС‹, С‡С‚Рѕ РІ СЃРІРѕСЋ РѕС‡РµСЂРµРґСЊ РїРѕРјРѕРіР°РµС‚ РёР·Р±Р°РІРёС‚СЊСЃСЏ РѕС‚ Р±РµСЃСЃРѕРЅРЅРёС†С‹ Рё СЃС‚СЂРµСЃСЃР°. Р•СЃС‚СЊ РІ С†РµР»СЊРЅРѕРј СЃСѓС…РѕРј РјРѕР»РѕРєРµ Рё Р°СЃРєРѕСЂР±РёРЅРѕРІР°СЏ РєРёСЃР»РѕС‚Р°, РєРѕС‚РѕСЂР°СЏ РЅСѓР¶РЅР° РґР»СЏ РёРјРјСѓРЅРёС‚РµС‚Р°. РЈС‡РёС‚С‹РІР°СЏ СЃРѕРґРµСЂР¶Р°РЅРёРµ РІРёС‚Р°РјРёРЅР° D, СЌС‚РѕС‚ РїСЂРѕРґСѓРєС‚ СЃРЅРёР¶Р°РµС‚ СЂРёСЃРє РІРѕР·РЅРёРєРЅРѕРІРµРЅРёСЏ РѕСЃС‚РµРѕРїРѕСЂРѕР·Р° Рё СЂР°С…РёС‚Р°. Р•СЃС‚СЊ РІ СЃСѓС…РѕРј РјРѕР»РѕРєРµ С…РѕР»РёРЅ, РєРѕС‚РѕСЂС‹Р№ РЅРѕСЂРјР°Р»РёР·СѓРµС‚ СѓСЂРѕРІРµРЅСЊ С…РѕР»РµСЃС‚РµСЂРёРЅР° РІ РєСЂРѕРІРё Рё СЃРЅРёР¶Р°РµС‚ РїСЂРѕСЏРІР»РµРЅРёРµ РѕС‚РµРєРѕРІ. Р’С…РѕРґРёС‚ РІ СЃРѕСЃС‚Р°РІ СЌС‚РѕРіРѕ РїСЂРѕРґСѓРєС‚Р° Рё Р¶РµР»РµР·Рѕ, РєРѕС‚РѕСЂРѕРµ СЃРїРѕСЃРѕР±СЃС‚РІСѓРµС‚ РєСЂРѕРІРµС‚РІРѕСЂРµРЅРёСЋ Рё СѓР»СѓС‡С€Р°РµС‚ СЃРѕСЃС‚РѕСЏРЅРёРµ РєСЂРѕРІРё. Р‘Р»Р°РіРѕРґР°СЂСЏ СЃРѕРІРјРµСЃС‚РЅРѕРјСѓ РґРµР№СЃС‚РІРёСЋ РєР°Р»СЊС†РёСЏ Рё С„РѕСЃС„РѕСЂР° Р°РєС‚РёРІРёСЂСѓРµС‚ РїСЂРѕС†РµСЃСЃ СЂРµРіРµРЅРµСЂР°С†РёРё Рё СѓРєСЂРµРїР»РµРЅРёСЏ РєРѕСЃС‚РЅРѕР№ С‚РєР°РЅРё. Р•СЃС‚СЊ РІ С†РµР»СЊРЅРѕРј СЃСѓС…РѕРј РјРѕР»РѕРєРµ РјРёРЅРµСЂР°Р»С‹, РєРѕС‚РѕСЂС‹Рµ РІР°Р¶РЅС‹ РґР»СЏ СЃРµСЂРґС†Р° Рё СЃРѕСЃСѓРґРѕРІ - РјР°РіРЅРёР№ Рё РєР°Р»РёР№. Р­С‚Рѕ С‚РѕР»СЊРєРѕ РЅРµР±РѕР»СЊС€РѕР№ РїРµСЂРµС‡РµРЅСЊ РІРµС‰РµСЃС‚РІ, РєРѕС‚РѕСЂС‹Рµ РµСЃС‚СЊ РІ СЌС‚РѕРј РїСЂРѕРґСѓРєС‚Рµ.</p>
+				<h2>РџР РћР¦Р•РЎРЎ РР—Р“РћРўРћР’Р›Р•РќРРЇ РџР РћР”РЈРљРўРђ</h2>
+				<p id="sh1">РћСЃРЅРѕРІРѕР№ РїСЂРѕС†РµСЃСЃР° РёР·РіРѕС‚РѕРІР»РµРЅРёСЏ СЌС‚РѕРіРѕ РїСЂРѕРґСѓРєС‚Р° СЏРІР»СЏРµС‚СЃСЏ РІС‹РїР°СЂРёРІР°РЅРёРµ РІРѕРґС‹ РёР· РѕР±С‹С‡РЅРѕРіРѕ РјРѕР»РѕРєР°. РџРµСЂРµРґ РЅР°С‡Р°Р»РѕРј РёР·РіРѕС‚РѕРІР»РµРЅРёСЏ СЃРІРµР¶РµРµ РјРѕР»РѕРєРѕ РїР°СЃС‚РµСЂРёР·СѓСЋС‚, РїСЂРёРІРѕРґСЏС‚ Рє РґРѕСЃС‚Р°С‚РѕС‡РЅС‹Рј РЅРѕСЂРјР°Рј Р¶РёСЂРЅРѕСЃС‚Рё Рё СЃРіСѓС‰Р°СЋС‚. РџРѕСЃР»Рµ РїСЂРѕРёСЃС…РѕРґРёС‚ РїСЂРѕС†РµСЃСЃ РіРѕРјРѕРіРµРЅРёР·Р°С†РёРё РїСЂРѕРґСѓРєС‚Р° Рё РїРѕСЃР»РµРґСѓСЋС‰Р°СЏ РµРіРѕ СЃСѓС€РєР° РІ СЃСѓС€РёР»РєР°С… СЂР°СЃРїС‹Р»РёС‚РµР»СЊРЅРѕРіРѕ РёР»Рё РІР°Р»СЊС†РѕРІРѕРіРѕ С‚РёРїР°. РџСЂРёС‡РµРј РїРµСЂРІС‹Рµ РїРѕР»СЊР·СѓСЋС‚СЃСЏ РЅР°РјРЅРѕРіРѕ Р±РѕР»СЊС€РµР№ РїРѕРїСѓР»СЏСЂРЅРѕСЃС‚СЊСЋ Сѓ РїСЂРѕРјС‹С€Р»РµРЅРЅРёРєРѕРІ, С‚Р°Рє РєР°Рє РёС… РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚СЊ РІ СЂР°Р·С‹ Р±РѕР»СЊС€Рµ, Р° РєР°С‡РµСЃС‚РІРѕ РїСЂРѕРґСѓРєС‚Р° РїСЂРё СЌС‚РѕРј РЅРµ С‚РµСЂСЏРµС‚СЃСЏ. РќР° С‚Р°РєРёС… СѓСЃС‚Р°РЅРѕРІРєР°С… СЃСѓС€РєР° РїСЂРѕРёР·РІРѕРґРёС‚СЃСЏ РїСЂРё С‚РµРјРїРµСЂР°С‚СѓСЂР°С… РѕС‚ 150 РґРѕ 180 РіСЂР°РґСѓСЃРѕРІ. РќРѕ РёР·РЅР°С‡Р°Р»СЊРЅРѕ РїСЂРµРґРїРѕС‡С‚РµРЅРёРµ РѕС‚РґР°РІР°Р»РѕСЃСЊ РІР°Р»СЊС†РѕРІС‹Рј СЃСѓС€РёР»РєР°Рј, РїСЂРѕС†РµСЃСЃ РІ РєРѕС‚РѕСЂС‹С… РїСЂРѕРёСЃС…РѕРґРёР» СЃ РїРѕРјРѕС‰СЊСЋ РєРѕРЅРґСѓРєС‚РёРІРЅРѕР№ СЃСѓС€РєРё. Р”Р»СЏ СЌС‚РѕРіРѕ РЅР° СЃСѓС€РёР»РєСѓ РїРѕРґР°РµС‚СЃСЏ РєРѕРЅС†РµРЅС‚СЂРёСЂРѕРІР°РЅРЅС‹Р№ С†РµР»СЊРЅС‹Р№ РїСЂРѕРґСѓРєС‚, РїСЂРѕС€РµРґС€РёР№ РІС‹РїР°СЂРёРІР°РЅРёРµ РІ РјСѓР»СЊС‚РёС†РёРєР»РѕРЅРЅС‹С… Р°РїРїР°СЂР°С‚Р°С…. РЎРѕРґРµСЂР¶Р°РЅРёРµ СЃСѓС…РёС… РІРµС‰РµСЃС‚РІ РІ С‚Р°РєРѕРј РјРѕР»РѕРєРµ СЃРѕСЃС‚Р°РІР»СЏРµС‚ РїСЂРёР±Р»РёР·РёС‚РµР»СЊРЅРѕ 40%. РџРѕР»СѓС‡РµРЅРЅС‹Р№ С‚Р°РєРёРј РѕР±СЂР°Р·РѕРј РїРѕСЂРѕС€РѕРє СЃРѕРґРµСЂР¶РёС‚ РІ СЃРµР±Рµ РїСЂРёРјРµСЂРЅРѕ 3% РѕСЃС‚Р°С‚РѕС‡РЅРѕР№ РІР»Р°Р¶РЅРѕСЃС‚Рё. Р—Р° СЃС‡РµС‚ С‚РѕРіРѕ, С‡С‚Рѕ СЃРіСѓС‰РµРЅРЅРѕРµ РјРѕР»РѕРєРѕ РїСЂРё СЃРѕРїСЂРёРєРѕСЃРЅРѕРІРµРЅРёРё СЃ РЅР°РіСЂРµС‚РѕР№ РїРѕРІРµСЂС…РЅРѕСЃС‚СЊСЋ СЃСѓС€РёР»РєРё РєР°СЂР°РјРµР»РёР·РёСЂСѓРµС‚СЃСЏ, РіРѕС‚РѕРІС‹Р№ РїСЂРѕРґСѓРєС‚ РёРјРµРµС‚ СЃР»Р°РґРєРѕРІР°С‚С‹Р№ РєР°СЂР°РјРµР»СЊРЅС‹Р№ РїСЂРёРІРєСѓСЃ. РћРЅ СЃРѕРґРµСЂР¶РёС‚ РІ СЃРІРѕРµРј СЃРѕСЃС‚Р°РІРµ РјРЅРѕРіРѕ СЃРІРѕР±РѕРґРЅС‹С… Р¶РёСЂРѕРІ Рё Р±Р»Р°РіРѕРґР°СЂСЏ СЌС‚РѕРјСѓ СЏРІР»СЏРµС‚СЃСЏ РЅРµР·Р°РјРµРЅРёРјС‹Рј РїСЂРѕРґСѓРєС‚РѕРј РІ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµ С€РѕРєРѕР»Р°РґР°. РўР°РєРёРј РєР°СЂР°РјРµР»СЊРЅС‹Рј РјРѕР»РѕРєРѕРј Р·Р°РјРµРЅСЏСЋС‚ РґРѕСЂРѕРіРѕСЃС‚РѕСЏС‰РµРµ РјР°СЃР»Рѕ РєР°РєР°Рѕ. Р•РґРёРЅСЃС‚РІРµРЅРЅС‹Рј РјРёРЅСѓСЃРѕРј РїСЂРё РїСЂРѕРёР·РІРѕРґСЃС‚РІРµ РјРѕР»РѕРєР° РЅР° РІР°Р»СЊС†РѕРІС‹С… СЃСѓС€РёР»РєР°С… СЏРІР»СЏРµС‚СЃСЏ РЅРёР·РєР°СЏ РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚СЊ. РџРѕСЃР»Рµ СЃСѓС€РєРё РјРѕР»РѕРєР° Р»СЋР±С‹Рј РёР· РІРёРґРѕРІ, РµРіРѕ РїСЂРѕСЃРµРёРІР°СЋС‚ Рё РѕС…Р»Р°Р¶РґР°СЋС‚. Р§С‚РѕР±С‹ СѓРІРµР»РёС‡РёС‚СЊ СЃСЂРѕРє РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ, РїСЂРѕРґСѓРєС‚ СѓРїР°РєРѕРІС‹РІР°СЋС‚ РїСЂРё РїРѕРјРѕС‰Рё РІР°РєСѓСѓРјР° РёР»Рё РёРЅРµСЂС‚РЅС‹С… РіР°Р·РѕРІ. Р”Р»СЏ РїСЂРѕРёР·РІРѕРґСЃС‚РІР° СЃСѓС…РѕРіРѕ РЅР°РїРёС‚РєР° СЃСѓС‰РµСЃС‚РІСѓСЋС‚ РґРІР° Р“РћРЎРўР°: 4495-87 <em>В«РњРѕР»РѕРєРѕ С†РµР»СЊРЅРѕРµ СЃСѓС…РѕРµВ»</em> Рё Р  52791-2007 <em>В«РљРѕРЅСЃРµСЂРІС‹ РјРѕР»РѕС‡РЅС‹Рµ. РњРѕР»РѕРєРѕ СЃСѓС…РѕРµ. РўРµС…РЅРёС‡РµСЃРєРёРµ СѓСЃР»РѕРІРёСЏВ».</em></p>
+				<h2>РљР›РђРЎРЎРР¤РРљРђР¦РРЇ Р РҐРРњРР§Р•РЎРљРР™ РЎРћРЎРўРђР’</h2>
+				<p id="sh1"><em>РЎСѓС…РѕРµ РјРѕР»РѕРєРѕ</em> Р±С‹РІР°РµС‚ РґРІСѓС… РІРёРґРѕРІ: <em>С†РµР»СЊРЅРѕРµ СЃСѓС…РѕРµ РјРѕР»РѕРєРѕ (РЎР¦Рњ)</em> Рё <em>РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРµ СЃСѓС…РѕРµ РјРѕР»РѕРєРѕ (РЎРћРњ)</em>. Р’ Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РѕС‚ СЂР°Р·РЅРѕРІРёРґРЅРѕСЃС‚Рё РјРµРЅСЏРµС‚СЃСЏ РµРіРѕ РїРёС‰РµРІР°СЏ С†РµРЅРЅРѕСЃС‚СЊ Рё СЃРѕРґРµСЂР¶Р°РЅРёРµ РїРѕР»РµР·РЅС‹С… РІРµС‰РµСЃС‚РІ Рё РІРёС‚Р°РјРёРЅРѕРІ. РњРёРЅРµСЂР°Р»СЊРЅС‹Р№ РєРѕРјРїР»РµРєСЃ РІ РѕР±РѕРёС… РІРёРґР°С… РїСЂРѕРґСѓРєС‚Р° РѕРґРёРЅР°РєРѕРІ, РѕРґРЅР°РєРѕ РІ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРј РјРѕР»РѕРєРµ СЃРѕРґРµСЂР¶Р°РЅРёРµ РІРµС‰РµСЃС‚РІ РЅРµРјРЅРѕРіРѕ Р±РѕР»СЊС€Рµ.</p>
 				<figure>
-					<img align="center" alt="Таблица состава сухого молока" hspace="15" src="images/table.jpg" vspace="5">
+					<img align="center" alt="РўР°Р±Р»РёС†Р° СЃРѕСЃС‚Р°РІР° СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР°" hspace="15" src="images/table.jpg" vspace="5">
 					<figcaption>
-						<em>Состав цельного и обезжиренного молока</em>
+						<em>РЎРѕСЃС‚Р°РІ С†РµР»СЊРЅРѕРіРѕ Рё РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РјРѕР»РѕРєР°</em>
 					</figcaption>
 				</figure>
-				<p id="sh1">Как видно из таблицы, молоко богато такими минералами, как калий (примерно 48% суточной нормы) кальций (100%), фосфор (около 98,8 %). Энергетическая ценность колеблется в зависимости от вида от 350 ккал до 479 ккал на 100 грамм продукта.</p>
-				<p id="sh1">Витаминный состав представлен:</p>
+				<p id="sh1">РљР°Рє РІРёРґРЅРѕ РёР· С‚Р°Р±Р»РёС†С‹, РјРѕР»РѕРєРѕ Р±РѕРіР°С‚Рѕ С‚Р°РєРёРјРё РјРёРЅРµСЂР°Р»Р°РјРё, РєР°Рє РєР°Р»РёР№ (РїСЂРёРјРµСЂРЅРѕ 48% СЃСѓС‚РѕС‡РЅРѕР№ РЅРѕСЂРјС‹) РєР°Р»СЊС†РёР№ (100%), С„РѕСЃС„РѕСЂ (РѕРєРѕР»Рѕ 98,8 %). Р­РЅРµСЂРіРµС‚РёС‡РµСЃРєР°СЏ С†РµРЅРЅРѕСЃС‚СЊ РєРѕР»РµР±Р»РµС‚СЃСЏ РІ Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РѕС‚ РІРёРґР° РѕС‚ 350 РєРєР°Р» РґРѕ 479 РєРєР°Р» РЅР° 100 РіСЂР°РјРј РїСЂРѕРґСѓРєС‚Р°.</p>
+				<p id="sh1">Р’РёС‚Р°РјРёРЅРЅС‹Р№ СЃРѕСЃС‚Р°РІ РїСЂРµРґСЃС‚Р°РІР»РµРЅ:</p>
 				<ul id="sh1">
-					<li>витамином А;</li>
-					<li>бета-каротином;</li>
-					<li>витамином В1 (ретинолом);</li>
-					<li>витамином В2 (рибофлавином);</li>
-					<li>витамином В4 (холином);</li>
-					<li>витамином В5;</li>
-					<li>витамином В12;</li>
-					<li>витамином Н;</li>
-					<li>витамином РР.</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Рђ;</li>
+					<li>Р±РµС‚Р°-РєР°СЂРѕС‚РёРЅРѕРј;</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Р’1 (СЂРµС‚РёРЅРѕР»РѕРј);</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Р’2 (СЂРёР±РѕС„Р»Р°РІРёРЅРѕРј);</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Р’4 (С…РѕР»РёРЅРѕРј);</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Р’5;</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Р’12;</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Рќ;</li>
+					<li>РІРёС‚Р°РјРёРЅРѕРј Р Р .</li>
 				</ul>
-				<p id="sh1">Содержание жиров в цельном молоке порядка 25 грамм, в обезжиренном - около 1 грамма. Белки и углеводы, соответственно содержатся в количестве:</p>
+				<p id="sh1">РЎРѕРґРµСЂР¶Р°РЅРёРµ Р¶РёСЂРѕРІ РІ С†РµР»СЊРЅРѕРј РјРѕР»РѕРєРµ РїРѕСЂСЏРґРєР° 25 РіСЂР°РјРј, РІ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРј - РѕРєРѕР»Рѕ 1 РіСЂР°РјРјР°. Р‘РµР»РєРё Рё СѓРіР»РµРІРѕРґС‹, СЃРѕРѕС‚РІРµС‚СЃС‚РІРµРЅРЅРѕ СЃРѕРґРµСЂР¶Р°С‚СЃСЏ РІ РєРѕР»РёС‡РµСЃС‚РІРµ:</p>
 				<ul id="sh1">
-					<li>цельное молоко - 25,5 грамм и 36,5 грамм;</li>
-					<li>обезжиренное молоко - 36 грамм и 52 грамма.</li>
+					<li>С†РµР»СЊРЅРѕРµ РјРѕР»РѕРєРѕ - 25,5 РіСЂР°РјРј Рё 36,5 РіСЂР°РјРј;</li>
+					<li>РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРµ РјРѕР»РѕРєРѕ - 36 РіСЂР°РјРј Рё 52 РіСЂР°РјРјР°.</li>
 				</ul>
-				<p id="sh1">Также в состав продукта входят все жизненно важные аминокислоты, необходимые для синтеза белка, насыщенные жирные кислоты и еще омега-6 и омега-3 жирные кислоты. В общем, можно сказать, что витаминно-минеральный состав сухого молока ничуть не уступает составу натурального пастеризованного продукта.</p>
-				<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
-				<p id="sh2">Материал взят с источников:</p>
+				<p id="sh1">РўР°РєР¶Рµ РІ СЃРѕСЃС‚Р°РІ РїСЂРѕРґСѓРєС‚Р° РІС…РѕРґСЏС‚ РІСЃРµ Р¶РёР·РЅРµРЅРЅРѕ РІР°Р¶РЅС‹Рµ Р°РјРёРЅРѕРєРёСЃР»РѕС‚С‹, РЅРµРѕР±С…РѕРґРёРјС‹Рµ РґР»СЏ СЃРёРЅС‚РµР·Р° Р±РµР»РєР°, РЅР°СЃС‹С‰РµРЅРЅС‹Рµ Р¶РёСЂРЅС‹Рµ РєРёСЃР»РѕС‚С‹ Рё РµС‰Рµ РѕРјРµРіР°-6 Рё РѕРјРµРіР°-3 Р¶РёСЂРЅС‹Рµ РєРёСЃР»РѕС‚С‹. Р’ РѕР±С‰РµРј, РјРѕР¶РЅРѕ СЃРєР°Р·Р°С‚СЊ, С‡С‚Рѕ РІРёС‚Р°РјРёРЅРЅРѕ-РјРёРЅРµСЂР°Р»СЊРЅС‹Р№ СЃРѕСЃС‚Р°РІ СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР° РЅРёС‡СѓС‚СЊ РЅРµ СѓСЃС‚СѓРїР°РµС‚ СЃРѕСЃС‚Р°РІСѓ РЅР°С‚СѓСЂР°Р»СЊРЅРѕРіРѕ РїР°СЃС‚РµСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїСЂРѕРґСѓРєС‚Р°.</p>
+				<p id="soderzhanie"><a href="index.html"><u>РќР° РіР»Р°РІРЅСѓСЋ</u></a></p>
+				<p id="sh2">РњР°С‚РµСЂРёР°Р» РІР·СЏС‚ СЃ РёСЃС‚РѕС‡РЅРёРєРѕРІ:</p>
 				<nav>
 					<ul id="sh1">
 						<li><a href="http://xcook.info/product/moloko-suhoe-celnoe.html">http://xcook.info/product/moloko-suhoe-celnoe.html</a></li>
@@ -64,7 +65,7 @@
 			</div>
 		</article>
 		<footer>
-			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
+			&copy;Р РѕРјР°РЅ РўСЂРѕС€РёРЅ. Р§РµР»СЏР±РёРЅСЃРє - 2019. РЎР°Р№С‚ РІРёР·РёС‚РєР° &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">РќР°РїРёСЃР°С‚СЊ РјРЅРµ</a>
 		</footer>
 	</div>
 </body>
